# veloren-master

veloren-master/: .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
veloren-master/.cargo/: config.toml
veloren-master/.github/workflows/: mirror.yml  no-pr.yml
veloren-master/.gitlab/CI/: build.gitlab-ci.yml  check.gitlab-ci.yml  publish.gitlab-ci.yml
veloren-master/.gitlab/issue_templates/: Bug.md
veloren-master/.gitlab/scripts/: code-quality.sh  coverage.sh  env.sh  linux-aarch64.sh  linux-x86_64.sh  translation.sh  unittest.sh  windows-x86_64.sh
veloren-master/assets/: credits.ron
veloren-master/assets/common/: canary.canary
veloren-master/assets/common/abilities/: ability_set_manifest.ron
veloren-master/assets/voxygen/: net.veloren.veloren.desktop  net.veloren.veloren.metainfo.xml
veloren-master/assets/voxygen/i18n/: README.md
veloren-master/assets/voxygen/i18n/be/: main.ftl
veloren-master/assets/voxygen/i18n/ca/: main.ftl
veloren-master/assets/voxygen/i18n/cs/: main.ftl
veloren-master/assets/voxygen/i18n/de/: main.ftl
veloren-master/assets/voxygen/i18n/en/: main.ftl
veloren-master/assets/voxygen/i18n/es-419/: main.ftl  (+1 more)
veloren-master/assets/voxygen/shaders/: sprite-vert.glsl  terrain-vert.glsl
veloren-master/client/: Cargo.toml
veloren-master/client/examples/: chat_cli.rs
veloren-master/client/i18n/: Cargo.toml
veloren-master/client/i18n/src/: lib.rs
veloren-master/client/src/: lib.rs
veloren-master/common/: Cargo.toml
veloren-master/common/assets/: Cargo.toml
veloren-master/common/assets/src/: fs.rs  lib.rs  plugin_cache.rs
veloren-master/common/base/: Cargo.toml
veloren-master/common/base/src/: lib.rs  userdata_dir.rs
veloren-master/common/benches/: chonk_benchmark.rs  color_benchmark.rs  loot_benchmark.rs
veloren-master/common/dynlib/: Cargo.toml
veloren-master/common/ecs/: Cargo.toml
veloren-master/common/ecs/src/: system.rs
veloren-master/common/examples/: sprite_debug.rs
veloren-master/common/frontend/: Cargo.toml
veloren-master/common/frontend/src/: lib.rs
veloren-master/common/i18n/: Cargo.toml
veloren-master/common/net/: Cargo.toml
veloren-master/common/query_server/: Cargo.toml
veloren-master/common/query_server/examples/: dummy_query_server.rs  query_client.rs
veloren-master/common/query_server/src/: proto.rs  server.rs
veloren-master/common/src/: event.rs  generation.rs  recipe.rs  slowjob.rs  typed.rs
veloren-master/common/src/comp/: ability.rs  anchor.rs  ori.rs  player.rs
veloren-master/common/src/terrain/: mod.rs
veloren-master/common/src/util/: mod.rs
veloren-master/common/state/: Cargo.toml
veloren-master/common/state/src/: lib.rs
veloren-master/common/state/src/plugin/: module.rs
veloren-master/common/systems/: Cargo.toml
veloren-master/common/systems/src/phys/: collision.rs
veloren-master/common/systems/tests/: character_state.rs
veloren-master/common/systems/tests/phys/: basic.rs  utils.rs
veloren-master/network/: Cargo.toml
veloren-master/network/benches/: speed.rs
veloren-master/network/examples/: chat.rs  network_speed.rs  tcp_loadtest.rs
veloren-master/network/examples/fileshare/: commands.rs  main.rs  server.rs
veloren-master/network/protocol/: Cargo.toml
veloren-master/network/protocol/benches/: protocols.rs
veloren-master/network/protocol/src/: error.rs  frame.rs  handshake.rs  lib.rs  types.rs
veloren-master/network/src/: api.rs  lib.rs  message.rs  metrics.rs
veloren-master/network/tests/: closing.rs  helper.rs  integration.rs
veloren-master/nix/: README.md
veloren-master/plugin/examples/anim/: Cargo.toml
veloren-master/plugin/examples/hello/: Cargo.toml
veloren-master/plugin/wit/: LICENSE  veloren.wit
veloren-master/rtsim/: Cargo.toml
veloren-master/rtsim/src/: lib.rs
veloren-master/server/: Cargo.toml
veloren-master/server-cli/: Cargo.toml  Dockerfile  docker-compose.yml
veloren-master/server-cli/src/: cli.rs  shutdown_coordinator.rs
veloren-master/server-cli/src/web/ui/: ui.html
veloren-master/server/agent/: Cargo.toml
veloren-master/server/agent/src/: lib.rs
veloren-master/server/src/: cmd.rs  lib.rs  metrics.rs  terrain_persistence.rs
veloren-master/server/src/events/: entity_manipulation.rs
veloren-master/server/src/migrations/: V10__dash_melee_energy_cost_fix.sql  V16__item_persistence.sql  V19__move_waypoint_to_stats.sql  V20__item_storage.sql  V49__modular_weapons.sql  V54__overflow_slots.sql  V60__recipe_book.sql  V61__fix_recipe_migration.sql
veloren-master/server/src/persistence/: character_updater.rs  diesel_to_rusqlite.rs  mod.rs
veloren-master/server/src/rtsim/: mod.rs
veloren-master/server/src/settings/: mod.rs  server_description.rs
veloren-master/server/src/sys/: metrics.rs  server_info.rs
veloren-master/voxygen/: Cargo.toml
veloren-master/voxygen/anim/: Cargo.toml
veloren-master/voxygen/anim/src/: lib.rs
veloren-master/voxygen/benches/: meshing_benchmark.rs
veloren-master/voxygen/egui/: Cargo.toml
veloren-master/voxygen/egui/src/: lib.rs
veloren-master/voxygen/examples/: character_renderer.rs
veloren-master/voxygen/i18n-helpers/: Cargo.toml
veloren-master/voxygen/src/: cli.rs  cmd.rs  main.rs  panic_handler.rs  window.rs
veloren-master/voxygen/src/audio/: mod.rs
veloren-master/voxygen/src/hud/: crafting.rs  diary.rs  mod.rs  trade.rs  util.rs
veloren-master/voxygen/src/render/: mod.rs
veloren-master/voxygen/src/session/: mod.rs
veloren-master/voxygen/src/settings/: audio.rs  mod.rs  networking.rs
veloren-master/voxygen/src/ui/: img_ids.rs
veloren-master/world/: Cargo.toml
veloren-master/world/benches/: cave.rs  tree.rs
veloren-master/world/examples/: batch_generate.rs  cave_biomes.rs  chunk_compression_benchmarks.rs  economy_tree.rs  heightmap_visualization.rs  pricing_csv.rs  settlement_viewer.rs  site.rs  view.rs  water.rs  world_block_statistics.rs  world_generate_time.rs
veloren-master/world/src/: lib.rs
veloren-master/world/src/sim/: erosion.rs  mod.rs
(+69 files in other folders)
