[package]
name = "coping-chronicles-server-cli"
version = "0.17.0"
edition = "2021"

[lints]
workspace = true

[package.metadata.nix]
build = true
app = true
longDescription = """
Coping chronicles is a multiplayer game that is therapeutic

This package includes the official server CLI.
"""

[features]
worldgen = ["server/worldgen"]
persistent_world = ["server/persistent_world"]
# needed to stay compatible with voxygens format
default-publish = ["default"]
default = ["worldgen", "persistent_world"]
tracy = ["common-frontend/tracy"]
plugins = ["server/plugins"]
hot-reloading = ["server/hot-reloading"]
hot-agent = ["server/hot-agent", "agent"]
hot-site = ["server/hot-site", "world"]

[dependencies]
server = { package = "coping-chronicles-server", path = "../server", default-features = false, features = [
    "simd",
] }
agent = { package = "coping-chronicles-server-agent", path = "../server/agent", optional = true }
common = { package = "coping-chronicles-common", path = "../common" }
common-base = { package = "coping-chronicles-common-base", path = "../common/base" }
common-net = { package = "coping-chronicles-common-net", path = "../common/net" }
common-frontend = { package = "coping-chronicles-common-frontend", path = "../common/frontend" }
world = { package = "coping-chronicles-world", path = "../world", optional = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
num_cpus = "1.0"
cansi = "2.2.1"
clap = { workspace = true }
crossterm = "0.28"
lazy_static = { workspace = true }
signal-hook = "0.3.6"
shell-words = "1.0.0"
tracing = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["rc", "derive"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
rand = { workspace = true }
# ECS
specs = { workspace = true }

#HTTP
axum = { version = "0.8" }
hyper = "1"
http-body-util = "0.1"
prometheus = { workspace = true }
chrono = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.29"
