[package]
authors = ["Samuel Keiffer <samuelkeiffer@gmail.com>"]
name = "coping-chronicles-server-agent"
edition = "2021"
version = "0.1.0"

[lints]
workspace = true

[features]
worldgen = []
use-dyn-lib = ["common-dynlib"]
be-dyn-lib = []

[dependencies]
common = { package = "coping-chronicles-common", path = "../../common" }
common-base = { package = "coping-chronicles-common-base", path = "../../common/base" }
common-dynlib = { package = "coping-chronicles-common-dynlib", path = "../../common/dynlib", optional = true }
world = { package = "coping-chronicles-world", path = "../../world" }
rtsim = { package = "coping-chronicles-rtsim", path = "../../rtsim" }

specs = { workspace = true, features = ["shred-derive"] }
vek = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
itertools = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
